Fix number alignment in data grid

--- a/stroom-app/src/main/resources/ui/css/celltable/DataGrid.css
+++ b/stroom-app/src/main/resources/ui/css/celltable/DataGrid.css
@@ -65,7 +65,6 @@
 .dataGridCell {
 	padding: var(--row__padding--vertical) 0 var(--row__padding--vertical) var(--row__padding--horizontal);
 	vertical-align: middle;
-	text-align: left;
 	overflow: hidden;
 	height: 16px;
 	white-space: nowrap;
